# egyptian-id-validator

./: .gitignore  README.md  docker-compose.yml
id_api/: Dockerfile  manage.py  pyproject.toml
id_api/id_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
id_api/validator/: authentication.py  enums.py  helper.py  models.py  serializers.py  swagger_schema.py  tasks.py  tests.py  throttling.py  urls.py  views.py
id_api/validator/migrations/: 0001_initial.py  0002_remove_apikey_owner.py  0003_apikey_prefix_key.py  0004_alter_apikey_quota_requests_per_day_and_more.py
